--- a/game/app/index.html
+++ b/game/app/index.html
@@ -3,10 +3,17 @@
 <head>
 	<title>ld31</title>
 	<script type="text/javascript" src="index.js"></script>
+	<style type="text/css">
+		body {
+			background: #999; 
+		}
+
+		canvas {
+			background: #888;
+		}
+	</style>
 </head>
 <body>
-	<h1>ld31</h1>
-
-	<canvas width="500" height="500"/></canvas>
+	<canvas width="500" height="500" id="canvas" /></canvas>
 </body>
 </html>
