File structure cleanup, adding mute feature

--- a/game/app/index.html
+++ b/game/app/index.html
@@ -3,23 +3,7 @@
 <head>
 	<title>dryland</title>
 	<script type="text/javascript" src="index.js"></script>
-	<style type="text/css">
-		body {
-			background: #333; 
-			margin: 0;
-			padding: 0;
-		}
-
-		#center {
-			width: 500px;
-			margin: 10px auto;
-		}
-
-		canvas {
-			border-width: 14px;
-			border-image: url(/assets/corner.png) 14;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 	<div id="center">
